# typescript-python-monorepo-template

./: .cspell.json  .gitignore  .prettierrc.js  CLAUDE.md  README.md  cspell-node.config.cjs  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  whatever.code-workspace
.devcontainer/: README.md  devcontainer.json  docker-compose.yml
apps/frontend/: .cspell.json  CLAUDE.md  components.json  eslint.config.js  package.json  rsbuild.config.ts  tsconfig.json
apps/frontend/.storybook/: main.ts  preview.ts
apps/frontend/app/: app.css  root.tsx  type-references.d.ts
apps/frontend/app/routes/: home.tsx
apps/frontend/src/apis/: app_schema.d.ts  schema.d.ts
apps/frontend/src/components/: button-group.stories.tsx  button-group.tsx
apps/frontend/src/components/shadcn-ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  button.tsx  calendar.tsx  card.tsx  carousel.tsx  chart.tsx  checkbox.tsx  command.tsx  context-menu.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  form.tsx  hover-card.tsx  input-otp.tsx  input.tsx  label.tsx  menubar.tsx  navigation-menu.tsx  pagination.tsx  popover.tsx  progress.tsx  radio-group.tsx  resizable.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  slider.tsx  switch.tsx  table.tsx  tabs.tsx  textarea.tsx  (+3 more)
configs/eslint/: .prettierrc.js  README.md  eslint.config.js  package.json
configs/eslint/plugins/: comment-length.js  comments.js  eslintJs.js  import.js  jest.js  prettier.js  react-compiler.js  react-hooks.js  react.js  storybook.js  stylistic.js  tailwind.js  typescript-eslint.js  unicorn.js
configs/eslint/plugins/ruleDetails/: no-restricted-syntax.js  typescript-eslint-naming-convention.js
configs/jest/: jest.config.js  package.json  swc.config.js
configs/macro/: eslint.config.js  index.js  package.json  tsconfig.json  types.d.ts
configs/tsconfig/: app.json  base.json  package.json
devImages/base/.devcontainer/: Dockerfile  devcontainer.json
pyPackages/app/: .cspell.json  openapi.json  pyproject.toml  schema.json
pyPackages/app/app/: cli.py  dev.py  gen_schema.py  get_openapi.py  main.py  mongo.py
