[project]
name = "whatever"
version = "0.0.0"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "python-dotenv",
]

[tool.uv.sources]
app = { workspace = true }

[tool.uv.workspace]
members = [
  "pyPackages/*"
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.uv]
dev-dependencies = [
    "pre-commit",
    "pytest",
    "ruff",
    "pyright",
    # These are added as dev dependencies because they should be available
    #  when developing the project.
    "app",
    "inflection>=0.5.1",
]
package = false

[tool.ruff]
target-version = "py312"
line-length = 103 # Allow a few more characters for long lines
indent-width = 2

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "B",   # flake8-bugbear
  "I",   # isort
  "W",   # pycodestyle warnings
  "C4",  # flake8-comprehensions
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "ANN", # flake8-annotations
  "PT",  # flake8-pytest-style
  "RET", # flake8-return
  "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
exclude = [".venv", ".github", "docs", "tests", ".devcontainer"]
include = ["pyPackages"]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false

[tool.pytest.ini_options]
cache_dir = ".cache/pytest"
pythonpath = [".", "scripts"]
