[project]
name = "app"
version = "0.1.0"
description = "LLM backend app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pymongo>=4.12.1",
    "requests>=2.32.3",
    "typer>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.7.3,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."

[project.scripts]
gen_schema = "app.gen_schema:main"
demo_app = "app.cli:main"
demo_mongo = "app.mongo:main"
fastapi_dev = "app.dev:main"
